--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -12,19 +12,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-26 Fri 18:47]
+#+CAPTION: Clock summary at [2019-04-27 Sat 06:25]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *32:47* |       |       | 100.0 |
+| *Total time*                                           | *33:30* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 32:47   |       |       | 100.0 |
-| Active                                                 |         | 32:47 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   8.1 |
+| Stories                                                | 33:30   |       |       | 100.0 |
+| Active                                                 |         | 33:30 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   8.0 |
 | Sprint and product backlog grooming                    |         |       |  0:42 |   2.1 |
-| Create a video demo for the previous sprint's features |         |       |  1:55 |   5.8 |
-| Read variability papers                                |         |       |  1:04 |   3.3 |
-| Implement variability model                            |         |       | 26:26 |  80.6 |
+| Create a video demo for the previous sprint's features |         |       |  1:55 |   5.7 |
+| Read variability papers                                |         |       |  1:04 |   3.2 |
+| Implement variability model                            |         |       | 27:09 |  81.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -190,6 +190,7 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-27 Sat 05:42]--[2019-04-27 Sat 06:25] =>  0:43
     CLOCK: [2019-04-26 Fri 17:56]--[2019-04-26 Fri 18:48] =>  0:52
     CLOCK: [2019-04-26 Fri 17:00]--[2019-04-26 Fri 17:29] =>  0:29
     CLOCK: [2019-04-26 Fri 16:41]--[2019-04-26 Fri 16:59] =>  0:18
@@ -303,6 +304,19 @@ Notes:
   should set the pointer to null in the adapter and see if anything
   breaks.
 - make configuration model =Nameable=.
+
+*** Create an element builder                                         :story:
+
+At present we are manually populating the core properties of
+element. This means every time a new one is added, we need to go and
+find all the places where element is being created. We need a template
+based builder for element that takes care of these:
+
+- populate implicit properties, such as configuration whenever name is
+  populated.
+- hide name factory inside of builder.
+- to determine the builder API, see all use cases where we are
+  manually creating the element.
 
 *** Remove dynamic stereotypes from coding                            :story:
 
