--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -12,19 +12,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-27 Sat 06:25]
+#+CAPTION: Clock summary at [2019-04-27 Sat 06:44]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *33:30* |       |       | 100.0 |
+| *Total time*                                           | *33:48* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 33:30   |       |       | 100.0 |
-| Active                                                 |         | 33:30 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   8.0 |
+| Stories                                                | 33:48   |       |       | 100.0 |
+| Active                                                 |         | 33:48 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   7.9 |
 | Sprint and product backlog grooming                    |         |       |  0:42 |   2.1 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   5.7 |
 | Read variability papers                                |         |       |  1:04 |   3.2 |
-| Implement variability model                            |         |       | 27:09 |  81.0 |
+| Implement variability model                            |         |       | 27:27 |  81.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -190,6 +190,7 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-27 Sat 06:26]--[2019-04-27 Sat 06:44] =>  0:18
     CLOCK: [2019-04-27 Sat 05:42]--[2019-04-27 Sat 06:25] =>  0:43
     CLOCK: [2019-04-26 Fri 17:56]--[2019-04-26 Fri 18:48] =>  0:52
     CLOCK: [2019-04-26 Fri 17:00]--[2019-04-26 Fri 17:29] =>  0:29
