--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -12,19 +12,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-27 Sat 09:23]
+#+CAPTION: Clock summary at [2019-04-27 Sat 09:28]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *34:56* |       |       | 100.0 |
+| *Total time*                                           | *35:00* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 34:56   |       |       | 100.0 |
-| Active                                                 |         | 34:56 |       | 100.0 |
+| Stories                                                | 35:00   |       |       | 100.0 |
+| Active                                                 |         | 35:00 |       | 100.0 |
 | Edit release notes for previous sprint                 |         |       |  2:40 |   7.6 |
 | Sprint and product backlog grooming                    |         |       |  0:42 |   2.0 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   5.5 |
-| Read variability papers                                |         |       |  1:04 |   3.1 |
-| Implement variability model                            |         |       | 28:35 |  81.8 |
+| Read variability papers                                |         |       |  1:04 |   3.0 |
+| Implement variability model                            |         |       | 28:39 |  81.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -190,6 +190,7 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-27 Sat 09:24]--[2019-04-27 Sat 09:28] =>  0:04
     CLOCK: [2019-04-27 Sat 09:05]--[2019-04-27 Sat 09:23] =>  0:18
     CLOCK: [2019-04-27 Sat 06:45]--[2019-04-27 Sat 07:35] =>  0:50
     CLOCK: [2019-04-27 Sat 06:26]--[2019-04-27 Sat 06:44] =>  0:18
