--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -12,19 +12,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-27 Sat 16:13]
+#+CAPTION: Clock summary at [2019-04-27 Sat 16:54]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *35:36* |       |       | 100.0 |
+| *Total time*                                           | *36:16* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 35:36   |       |       | 100.0 |
-| Active                                                 |         | 35:36 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   7.5 |
-| Sprint and product backlog grooming                    |         |       |  0:42 |   2.0 |
-| Create a video demo for the previous sprint's features |         |       |  1:55 |   5.4 |
-| Read variability papers                                |         |       |  1:04 |   3.0 |
-| Implement variability model                            |         |       | 29:15 |  82.2 |
+| Stories                                                | 36:16   |       |       | 100.0 |
+| Active                                                 |         | 36:16 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   7.4 |
+| Sprint and product backlog grooming                    |         |       |  0:42 |   1.9 |
+| Create a video demo for the previous sprint's features |         |       |  1:55 |   5.3 |
+| Read variability papers                                |         |       |  1:04 |   2.9 |
+| Implement variability model                            |         |       | 29:55 |  82.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -190,6 +190,7 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-27 Sat 16:14]--[2019-04-27 Sat 16:54] =>  0:40
     CLOCK: [2019-04-27 Sat 15:37]--[2019-04-27 Sat 16:13] =>  0:36
     CLOCK: [2019-04-27 Sat 09:24]--[2019-04-27 Sat 09:28] =>  0:04
     CLOCK: [2019-04-27 Sat 09:05]--[2019-04-27 Sat 09:23] =>  0:18
