--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -12,19 +12,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-27 Sat 17:17]
+#+CAPTION: Clock summary at [2019-04-27 Sat 17:49]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *36:35* |       |       | 100.0 |
+| *Total time*                                           | *37:07* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 36:35   |       |       | 100.0 |
-| Active                                                 |         | 36:35 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   7.3 |
+| Stories                                                | 37:07   |       |       | 100.0 |
+| Active                                                 |         | 37:07 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   7.2 |
 | Sprint and product backlog grooming                    |         |       |  0:42 |   1.9 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   5.2 |
 | Read variability papers                                |         |       |  1:04 |   2.9 |
-| Implement variability model                            |         |       | 30:14 |  82.6 |
+| Implement variability model                            |         |       | 30:46 |  82.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -190,6 +190,7 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-27 Sat 17:17]--[2019-04-27 Sat 17:49] =>  0:32
     CLOCK: [2019-04-27 Sat 16:57]--[2019-04-27 Sat 17:16] =>  0:19
     CLOCK: [2019-04-27 Sat 16:14]--[2019-04-27 Sat 16:54] =>  0:40
     CLOCK: [2019-04-27 Sat 15:37]--[2019-04-27 Sat 16:13] =>  0:36
