--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -6,25 +6,26 @@
 * Mission Statement
 
 - implement the variability model.
-- move towards using the new variability model types.
+- use the new variability model types.
+- implement profiles in terms of the new meta-model types.
 
 * Stories
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-27 Sat 18:59]
+#+CAPTION: Clock summary at [2019-04-28 Sun 07:29]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *38:13* |       |       | 100.0 |
+| *Total time*                                           | *39:02* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 38:13   |       |       | 100.0 |
-| Active                                                 |         | 38:13 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   7.0 |
+| Stories                                                | 39:02   |       |       | 100.0 |
+| Active                                                 |         | 39:02 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   6.8 |
 | Sprint and product backlog grooming                    |         |       |  0:42 |   1.8 |
-| Create a video demo for the previous sprint's features |         |       |  1:55 |   5.0 |
-| Read variability papers                                |         |       |  1:04 |   2.8 |
-| Implement variability model                            |         |       | 31:52 |  83.4 |
+| Create a video demo for the previous sprint's features |         |       |  1:55 |   4.9 |
+| Read variability papers                                |         |       |  1:04 |   2.7 |
+| Implement variability model                            |         |       | 32:41 |  83.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -190,6 +191,7 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-28 Sun 06:40]--[2019-04-28 Sun 07:29] =>  0:49
     CLOCK: [2019-04-27 Sat 18:50]--[2019-04-27 Sat 18:59] =>  0:09
     CLOCK: [2019-04-27 Sat 18:24]--[2019-04-27 Sat 18:49] =>  0:25
     CLOCK: [2019-04-27 Sat 18:12]--[2019-04-27 Sat 18:23] =>  0:11
