--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,19 +13,20 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-28 Sun 07:29]
+#+CAPTION: Clock summary at [2019-04-28 Sun 08:17]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *39:02* |       |       | 100.0 |
+| *Total time*                                           | *39:35* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 39:02   |       |       | 100.0 |
-| Active                                                 |         | 39:02 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   6.8 |
+| Stories                                                | 39:35   |       |       | 100.0 |
+| Active                                                 |         | 39:35 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   6.7 |
 | Sprint and product backlog grooming                    |         |       |  0:42 |   1.8 |
-| Create a video demo for the previous sprint's features |         |       |  1:55 |   4.9 |
+| Create a video demo for the previous sprint's features |         |       |  1:55 |   4.8 |
 | Read variability papers                                |         |       |  1:04 |   2.7 |
-| Implement variability model                            |         |       | 32:41 |  83.7 |
+| Finish implementing the variability model              |         |       | 10:49 |  27.3 |
+| Read meta-data using configurations                    |         |       | 22:25 |  56.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -189,8 +190,39 @@ sure our approach is aligned with the literature.
 - we have two asset models: product and component. They both project
   into archetype space, and both bind into the same variability model.
 
-*** STARTED Implement variability model                               :story:
+*** COMPLETED Finish implementing the variability model               :story:
+    CLOSED: [2019-04-28 Sun 08:16]
     :LOGBOOK:
+    CLOCK: [2019-04-24 Wed 18:45]--[2019-04-24 Wed 18:49] =>  0:04
+    CLOCK: [2019-04-24 Wed 17:47]--[2019-04-24 Wed 18:44] =>  0:57
+    CLOCK: [2019-04-24 Wed 17:30]--[2019-04-24 Wed 17:46] =>  0:16
+    CLOCK: [2019-04-24 Wed 17:10]--[2019-04-24 Wed 17:29] =>  0:19
+    CLOCK: [2019-04-24 Wed 16:29]--[2019-04-24 Wed 17:09] =>  0:40
+    CLOCK: [2019-04-24 Wed 15:56]--[2019-04-24 Wed 16:12] =>  0:16
+    CLOCK: [2019-04-24 Wed 15:45]--[2019-04-24 Wed 15:55] =>  0:10
+    CLOCK: [2019-04-24 Wed 15:14]--[2019-04-24 Wed 15:44] =>  0:30
+    CLOCK: [2019-04-24 Wed 14:16]--[2019-04-24 Wed 14:55] =>  0:39
+    CLOCK: [2019-04-24 Wed 13:44]--[2019-04-24 Wed 14:15] =>  0:31
+    CLOCK: [2019-04-24 Wed 13:14]--[2019-04-24 Wed 13:43] =>  0:29
+    CLOCK: [2019-04-24 Wed 11:55]--[2019-04-24 Wed 12:07] =>  0:12
+    CLOCK: [2019-04-24 Wed 11:11]--[2019-04-24 Wed 11:54] =>  0:43
+    CLOCK: [2019-04-24 Wed 10:58]--[2019-04-24 Wed 11:10] =>  0:12
+    CLOCK: [2019-04-24 Wed 10:53]--[2019-04-24 Wed 10:57] =>  0:04
+    CLOCK: [2019-04-24 Wed 09:01]--[2019-04-24 Wed 10:52] =>  1:51
+    CLOCK: [2019-04-23 Tue 13:42]--[2019-04-23 Tue 14:06] =>  0:24
+    CLOCK: [2019-04-23 Tue 11:00]--[2019-04-23 Tue 11:52] =>  0:52
+    CLOCK: [2019-04-23 Tue 10:36]--[2019-04-23 Tue 10:59] =>  0:23
+    CLOCK: [2019-04-23 Tue 09:51]--[2019-04-23 Tue 10:35] =>  0:44
+    CLOCK: [2019-04-23 Tue 07:21]--[2019-04-23 Tue 07:54] =>  0:33
+    :END:
+
+On the back of the redesign of the annotations model, which was
+completed last sprint, we now have to implement all classes and then
+hook them up to the engine.
+
+*** STARTED Read meta-data using configurations                       :story:
+    :LOGBOOK:
+    CLOCK: [2019-04-28 Sun 07:42]--[2019-04-28 Sun 08:15] =>  0:33
     CLOCK: [2019-04-28 Sun 06:40]--[2019-04-28 Sun 07:29] =>  0:49
     CLOCK: [2019-04-27 Sat 18:50]--[2019-04-27 Sat 18:59] =>  0:09
     CLOCK: [2019-04-27 Sat 18:24]--[2019-04-27 Sat 18:49] =>  0:25
@@ -245,32 +277,8 @@ sure our approach is aligned with the literature.
     CLOCK: [2019-04-25 Thu 08:57]--[2019-04-25 Thu 09:36] =>  0:39
     CLOCK: [2019-04-25 Thu 07:06]--[2019-04-25 Thu 07:20] =>  0:14
     CLOCK: [2019-04-25 Thu 06:38]--[2019-04-25 Thu 07:05] =>  0:27
-    CLOCK: [2019-04-24 Wed 18:45]--[2019-04-24 Wed 18:49] =>  0:04
-    CLOCK: [2019-04-24 Wed 17:47]--[2019-04-24 Wed 18:44] =>  0:57
-    CLOCK: [2019-04-24 Wed 17:30]--[2019-04-24 Wed 17:46] =>  0:16
-    CLOCK: [2019-04-24 Wed 17:10]--[2019-04-24 Wed 17:29] =>  0:19
-    CLOCK: [2019-04-24 Wed 16:29]--[2019-04-24 Wed 17:09] =>  0:40
-    CLOCK: [2019-04-24 Wed 15:56]--[2019-04-24 Wed 16:12] =>  0:16
-    CLOCK: [2019-04-24 Wed 15:45]--[2019-04-24 Wed 15:55] =>  0:10
-    CLOCK: [2019-04-24 Wed 15:14]--[2019-04-24 Wed 15:44] =>  0:30
-    CLOCK: [2019-04-24 Wed 14:16]--[2019-04-24 Wed 14:55] =>  0:39
-    CLOCK: [2019-04-24 Wed 13:44]--[2019-04-24 Wed 14:15] =>  0:31
-    CLOCK: [2019-04-24 Wed 13:14]--[2019-04-24 Wed 13:43] =>  0:29
-    CLOCK: [2019-04-24 Wed 11:55]--[2019-04-24 Wed 12:07] =>  0:12
-    CLOCK: [2019-04-24 Wed 11:11]--[2019-04-24 Wed 11:54] =>  0:43
-    CLOCK: [2019-04-24 Wed 10:58]--[2019-04-24 Wed 11:10] =>  0:12
-    CLOCK: [2019-04-24 Wed 10:53]--[2019-04-24 Wed 10:57] =>  0:04
-    CLOCK: [2019-04-24 Wed 09:01]--[2019-04-24 Wed 10:52] =>  1:51
-    CLOCK: [2019-04-23 Tue 13:42]--[2019-04-23 Tue 14:06] =>  0:24
-    CLOCK: [2019-04-23 Tue 11:00]--[2019-04-23 Tue 11:52] =>  0:52
-    CLOCK: [2019-04-23 Tue 10:36]--[2019-04-23 Tue 10:59] =>  0:23
-    CLOCK: [2019-04-23 Tue 09:51]--[2019-04-23 Tue 10:35] =>  0:44
-    CLOCK: [2019-04-23 Tue 07:21]--[2019-04-23 Tue 07:54] =>  0:33
-    :END:
 
-On the back of the redesign of the annotations model, which was
-completed last sprint, we now have to implement all classes and then
-hook them up to the engine.
+Make use of the new variability model classes to read annotations.
 
 Order of tasks:
 
