--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,20 +13,20 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-28 Sun 08:17]
+#+CAPTION: Clock summary at [2019-04-28 Sun 09:52]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *39:35* |       |       | 100.0 |
+| *Total time*                                           | *39:54* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 39:35   |       |       | 100.0 |
-| Active                                                 |         | 39:35 |       | 100.0 |
+| Stories                                                | 39:54   |       |       | 100.0 |
+| Active                                                 |         | 39:54 |       | 100.0 |
 | Edit release notes for previous sprint                 |         |       |  2:40 |   6.7 |
 | Sprint and product backlog grooming                    |         |       |  0:42 |   1.8 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   4.8 |
 | Read variability papers                                |         |       |  1:04 |   2.7 |
-| Finish implementing the variability model              |         |       | 10:49 |  27.3 |
-| Read meta-data using configurations                    |         |       | 22:25 |  56.6 |
+| Finish implementing the variability model              |         |       | 10:49 |  27.1 |
+| Read meta-data using configurations                    |         |       | 22:44 |  57.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -222,6 +222,7 @@ hook them up to the engine.
 
 *** STARTED Read meta-data using configurations                       :story:
     :LOGBOOK:
+    CLOCK: [2019-04-28 Sun 09:33]--[2019-04-28 Sun 09:52] =>  0:19
     CLOCK: [2019-04-28 Sun 07:42]--[2019-04-28 Sun 08:15] =>  0:33
     CLOCK: [2019-04-28 Sun 06:40]--[2019-04-28 Sun 07:29] =>  0:49
     CLOCK: [2019-04-27 Sat 18:50]--[2019-04-27 Sat 18:59] =>  0:09
@@ -277,6 +278,7 @@ hook them up to the engine.
     CLOCK: [2019-04-25 Thu 08:57]--[2019-04-25 Thu 09:36] =>  0:39
     CLOCK: [2019-04-25 Thu 07:06]--[2019-04-25 Thu 07:20] =>  0:14
     CLOCK: [2019-04-25 Thu 06:38]--[2019-04-25 Thu 07:05] =>  0:27
+    :END:
 
 Make use of the new variability model classes to read annotations.
 
