--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,28 +13,28 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-02 Thu 16:16]
+#+CAPTION: Clock summary at [2019-05-03 Fri 11:54]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *73:21* |       |       | 100.0 |
+| *Total time*                                           | *76:23* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 73:21   |       |       | 100.0 |
-| Active                                                 |         | 73:21 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   3.6 |
-| Sprint and product backlog grooming                    |         |       |  3:22 |   4.6 |
-| Create a video demo for the previous sprint's features |         |       |  1:55 |   2.6 |
-| Read variability papers                                |         |       |  1:04 |   1.5 |
-| Emacs maintenance and exploration work                 |         |       |  0:20 |   0.5 |
+| Stories                                                | 76:23   |       |       | 100.0 |
+| Active                                                 |         | 76:23 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   3.5 |
+| Sprint and product backlog grooming                    |         |       |  3:27 |   4.5 |
+| Create a video demo for the previous sprint's features |         |       |  1:55 |   2.5 |
+| Read variability papers                                |         |       |  1:04 |   1.4 |
+| Emacs maintenance and exploration work                 |         |       |  0:20 |   0.4 |
 | Fix issues with nightly build and CI                   |         |       |  0:39 |   0.9 |
-| Finish implementing the variability model              |         |       | 10:49 |  14.7 |
+| Finish implementing the variability model              |         |       | 10:49 |  14.2 |
 | Trim down stitch's use of annotations                  |         |       |  1:30 |   2.0 |
-| Read meta-data using configurations                    |         |       | 24:24 |  33.3 |
-| Remove uses of annotations                             |         |       |  7:44 |  10.5 |
+| Read meta-data using configurations                    |         |       | 24:24 |  31.9 |
+| Remove uses of annotations                             |         |       |  7:44 |  10.1 |
 | Stitch is still using artefact writer                  |         |       |  0:04 |   0.1 |
-| Exclude profiles from stereotypes processing           |         |       |  2:41 |   3.7 |
-| Profiles as meta-model elements                        |         |       | 13:54 |  19.0 |
-| Add support for composable stereotypes                 |         |       |  2:15 |   3.1 |
+| Exclude profiles from stereotypes processing           |         |       |  2:41 |   3.5 |
+| Profiles as meta-model elements                        |         |       | 13:54 |  18.2 |
+| Add support for composable stereotypes                 |         |       |  5:12 |   6.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -132,6 +132,7 @@ Happy Modeling!
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-05-03 Fri 11:28]--[2019-05-03 Fri 11:33] =>  0:05
     CLOCK: [2019-05-02 Thu 13:59]--[2019-05-02 Thu 14:12] =>  0:18
     CLOCK: [2019-05-02 Thu 12:54]--[2019-05-02 Thu 13:04] =>  0:10
     CLOCK: [2019-04-30 Tue 10:08]--[2019-04-30 Tue 10:41] =>  0:33
@@ -786,6 +787,9 @@ Mop-up tasks:
 
 *** STARTED Add support for composable stereotypes                    :story:
     :LOGBOOK:
+    CLOCK: [2019-05-03 Fri 11:39]--[2019-05-03 Fri 11:54] =>  0:15
+    CLOCK: [2019-05-03 Fri 11:34]--[2019-05-03 Fri 11:38] =>  0:04
+    CLOCK: [2019-05-03 Fri 08:50]--[2019-05-03 Fri 11:28] =>  2:38
     CLOCK: [2019-05-02 Thu 14:29]--[2019-05-02 Thu 16:16] =>  1:47
     CLOCK: [2019-05-02 Thu 14:13]--[2019-05-02 Thu 14:28] =>  0:15
     CLOCK: [2019-05-02 Thu 13:45]--[2019-05-02 Thu 13:58] =>  0:13
@@ -825,6 +829,21 @@ We could do with a simpler word for handcrafted. Check the literature.
 
 Once this is in place, we could have some top-level stereotype that
 aggregates all three (=masd::???=) and we can then tag types with it.
+
+*** Merging of profiles and configurations is non-intuitive           :story:
+
+As per comments in profile binding:
+
+#+begin_quote
+Finally, merge against the configuration. This must be done in order:
+first the accumulating_profile, the base layer. This ordering is
+*highly* non-intuitive. It derives from the fact that, on a merge, lhs
+takes precedence over rhs. If we merge the base layer first, as it is
+logical, this would mean that the "overrides" would fail to override
+for all of the features that the base layer has already set. Clearly
+base layer is not a good name here; its more of a "default feature
+configuration" or something of the sort.
+#+end_quote
 
 *** Use of binding points in profiles                                 :story:
 
